force-app/main/default/main/default/objects/Patient__c/fields/Doctor_Available__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Available__c</fullName>
    <label>Doctor Available</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specialist_Available__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr. Bhanu Prakash</fullName>
            </value>
            <value>
                <fullName>Dr. Bikash Nepal</fullName>
            </value>
            <value>
                <fullName>Dr. Bilash Gautam</fullName>
            </value>
            <value>
                <fullName>Dr. Bishal Raj</fullName>
            </value>
            <value>
                <fullName>Dr. Gautam Yadav</fullName>
            </value>
            <value>
                <fullName>Dr. Gyanu Prasad</fullName>
            </value>
            <value>
                <fullName>Dr. Himanshu Pradhan</fullName>
            </value>
            <value>
                <fullName>Dr. Hiralal Jadav</fullName>
            </value>
            <value>
                <fullName>Dr. Keshav Bhandari</fullName>
            </value>
            <value>
                <fullName>Dr. Kripa Khadka</fullName>
            </value>
            <value>
                <fullName>Dr. Mahesh Panta</fullName>
            </value>
            <value>
                <fullName>Dr. Menuka Ayer</fullName>
            </value>
            <value>
                <fullName>Dr. Mina Neupane</fullName>
            </value>
            <value>
                <fullName>Dr. Rajesh Karki</fullName>
            </value>
            <value>
                <fullName>Dr. Rohan Dhungel</fullName>
            </value>
            <value>
                <fullName>Dr. Ruben Khatri</fullName>
            </value>
            <value>
                <fullName>Dr. Sagar KC</fullName>
            </value>
            <value>
                <fullName>Dr. Samjeeb Yadav</fullName>
            </value>
            <value>
                <fullName>Dr. Shiv Narayan Yadav</fullName>
            </value>
            <value>
                <fullName>Dr. Sita Jha</fullName>
            </value>
            <value>
                <fullName>Dr. Subekshya Katwal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>