force-app/main/default/main/default/objects/Patient__c/fields/Select_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Select_Appointment_Date__c</fullName>
    <label>Select Appointment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>