force-app/main/default/main/default/objects/Patient__c/fields/Select_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Select_Appointment_Time__c</fullName>
    <label>Select Appointment Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8:00 AM - 8:30 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM - 9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 9:30 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM - 10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM - 11:30 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM - 12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:00 PM - 12:30 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM - 1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM - 1:30 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM - 2:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>