force-app/main/default/main/default/objects/Patient__c/fields/Specialist_Available__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Available__c</fullName>
    <label>Specialist Available</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Anaesthesiologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Ophthalmologist</fullName>
            </value>
            <value>
                <fullName>Sleep Disorder Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>