force-app/main/default/main/default/objects/Patient__c/validationRules/Age_must_be_greater_than_4.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_greater_than_4</fullName>
    <active>true</active>
    <errorConditionFormula>Patients_Age__c &lt; 4</errorConditionFormula>
    <errorMessage>Patients age must be greater than 4 years of Age. Contact Pediatric hospitalists if Patients age is below 4.</errorMessage>
</ValidationRule>