force-app/main/default/main/default/objects/Patient__c/validationRules/Appointment_Date_Greater_or_Equal.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Date_Greater_or_Equal</fullName>
    <active>true</active>
    <errorConditionFormula>Select_Appointment_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>How can one create Records for past ? Make sure Appointment Date is properly selected.</errorMessage>
</ValidationRule>