force-app/main/default/main/default/objects/Patient__c/validationRules/Contact_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Contact_Number__c) &lt;= 6</errorConditionFormula>
    <errorMessage>Enter Correct Phone Number.</errorMessage>
</ValidationRule>