force-app/main/default/main/default/objects/Patient__c/validationRules/First_Name_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Last_Name</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &lt;= 2  ||  LEN(Patient_Last_Name__c) &lt;=2</errorConditionFormula>
    <errorMessage>Length of Patients FirstName and Last Name must greater than 2.</errorMessage>
</ValidationRule>