force-app/main/default/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Doctor_Available__c</columns>
    <columns>Select_Appointment_Date__c</columns>
    <columns>Select_Appointment_Time__c</columns>
    <columns>Patient_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>